--- a/styles.css
+++ b/styles.css
@@ -283,16 +283,14 @@ h2 {
 /* Responsive Design */
 .menu-toggle {
     display: none;
-    flex-direction: column;
+    background-color: #ff0000;
+    color: #fff;
+    border: none;
+    padding: 10px 15px;
     cursor: pointer;
-}
-
-.bar {
-    height: 3px;
-    width: 25px;
-    background-color: #fff;
-    margin: 4px 0;
-    transition: 0.4s;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    border-radius: 5px;
 }
 
 @media (max-width: 768px) {
