--- a/styles.css
+++ b/styles.css
@@ -411,7 +411,10 @@ h2 {
 }
 
 .progress-update img {
-    width: 100%;
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 10px;
     margin-top: 15px;
     margin-bottom: 15px;
